infra/k8s/client-node-port-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port-service
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
