infra/k8s/comments-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: comments-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - port: 4001
      targetPort: 4001
