infra/k8s/event-bus-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - port: 4005
      targetPort: 4005
