infra/k8s/posts-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - port: 4000
      targetPort: 4000
