infra/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: blog.io
      http:
        paths:
          - path: /posts/create
            pathType: Exact
            backend:
              service:
                name: posts-cluster-ip-service
                port:
                  number: 4000
          - path: /posts
            pathType: Exact
            backend:
              service:
                name: query-cluster-ip-service
                port:
                  number: 4002
          - path: /posts/?(.*)/comments
            pathType: Exact
            backend:
              service:
                name: comments-cluster-ip-service
                port:
                  number: 4001
          - path: /?(.*)
            pathType: Exact
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
